generated-out/vanilla/dear-imgui-raw-vanilla-internal/cbits/DearImGuiWrappers.h

void ImGui_GetWindowScrollbarRect_wrap(ImGuiWindow* window, ImGuiAxis axis, ImRect* _out);
bool ImGui_ImageButtonWithFlags_wrap(ImGuiID id, ImTextureRef const* tex_ref, ImVec2 const* image_size, ImVec2 const* uv0, ImVec2 const* uv1, ImVec4 const* bg_col, ImVec4 const* tint_col, ImGuiButtonFlags flags);
bool ImGui_InputTextWithHintAndSize_wrap(const char* label, const char* hint, char* buf, int buf_size, ImVec2 const* size_arg, ImGuiInputTextFlags flags, ImGuiInputTextCallback callback, void* user_data);
bool ImGui_IsClippedEx_wrap(ImRect const* bb, ImGuiID id);
int ImGui_PlotEx_wrap(ImGuiPlotType plot_type, const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 const* size_arg);