generated-out/vanilla/dear-imgui-raw-vanilla-internal/src/DearImGui/Raw/Internal/ImGui.hsc


-- C: float ImGui::GetRoundedFontSize(float size)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_GetRoundedFontSize"
  imGui_GetRoundedFontSize :: CFloat -> IO CFloat
-- C: float ImGui::GetScale()
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_GetScale"
  imGui_GetScale :: IO CFloat
-- C: ImGuiKeyRoutingData* ImGui::GetShortcutRoutingData(ImGuiKeyChord key_chord)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_GetShortcutRoutingData"
  imGui_GetShortcutRoutingData :: ImGuiKeyChord -> IO (Ptr ImGuiKeyRoutingData)
-- C: const ImGuiStyleVarInfo* ImGui::GetStyleVarInfo(ImGuiStyleVar idx)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_GetStyleVarInfo"
  imGui_GetStyleVarInfo :: ImGuiStyleVar -> IO (Ptr ImGuiStyleVarInfo)
-- C: ImGuiWindow* ImGui::GetTopMostAndVisiblePopupModal()
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_GetTopMostAndVisiblePopupModal"
  imGui_GetTopMostAndVisiblePopupModal :: IO (Ptr ImGuiWindow)
-- C: ImGuiWindow* ImGui::GetTopMostPopupModal()
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_GetTopMostPopupModal"
  imGui_GetTopMostPopupModal :: IO (Ptr ImGuiWindow)
-- C: void ImGui::GetTypematicRepeatRate(ImGuiInputFlags flags, float* repeat_delay, float* repeat_rate)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_GetTypematicRepeatRate"
  imGui_GetTypematicRepeatRate :: ImGuiInputFlags -> (Ptr CFloat) -> (Ptr CFloat) -> IO ()
-- C: ImGuiTypingSelectRequest* ImGui::GetTypingSelectRequest(ImGuiTypingSelectFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_GetTypingSelectRequest"
  imGui_GetTypingSelectRequest :: ImGuiTypingSelectFlags -> IO (Ptr ImGuiTypingSelectRequest)
-- C: ImGuiID ImGui::GetWindowResizeBorderID(ImGuiWindow* window, ImGuiDir dir)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_GetWindowResizeBorderID"
  imGui_GetWindowResizeBorderID :: (Ptr ImGuiWindow) -> ImGuiDir -> IO ImGuiID
-- C: ImGuiID ImGui::GetWindowResizeCornerID(ImGuiWindow* window, int n)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_GetWindowResizeCornerID"
  imGui_GetWindowResizeCornerID :: (Ptr ImGuiWindow) -> CInt -> IO ImGuiID
-- C: ImGuiID ImGui::GetWindowScrollbarID(ImGuiWindow* window, ImGuiAxis axis)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_GetWindowScrollbarID"
  imGui_GetWindowScrollbarID :: (Ptr ImGuiWindow) -> ImGuiAxis -> IO ImGuiID
foreign import capi unsafe "DearImGuiWrappers.h ImGui_GetWindowScrollbarRect_wrap"
  c_imGui_GetWindowScrollbarRect :: (Ptr ImGuiWindow) -> ImGuiAxis -> (Ptr ImRect) -> IO ()

imGui_GetWindowScrollbarRect :: (Ptr ImGuiWindow) -> ImGuiAxis -> IO ImRect
imGui_GetWindowScrollbarRect window axis =
  alloca $ \_pOut -> c_imGui_GetWindowScrollbarRect window axis _pOut >> peek _pOut

-- C: ImGuiViewport* ImGui::GetWindowViewport()
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_GetWindowViewport"
  imGui_GetWindowViewport :: IO (Ptr ImGuiViewport)
foreign import capi unsafe "DearImGuiWrappers.h ImGui_ImageButtonWithFlags_wrap"
  c_imGui_ImageButtonWithFlags :: ImGuiID -> (Ptr ImTextureRef) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec4) -> (Ptr ImVec4) -> ImGuiButtonFlags -> IO CBool

imGui_ImageButtonWithFlags :: ImGuiID -> ImTextureRef -> ImVec2 -> ImVec2 -> ImVec2 -> ImVec4 -> ImVec4 -> ImGuiButtonFlags -> IO CBool
imGui_ImageButtonWithFlags id_ tex_ref image_size uv0 uv1 bg_col tint_col flags =
  with tex_ref $ \_p1 -> with image_size $ \_p2 -> with uv0 $ \_p3 -> with uv1 $ \_p4 -> with bg_col $ \_p5 -> with tint_col $ \_p6 -> c_imGui_ImageButtonWithFlags id_ _p1 _p2 _p3 _p4 _p5 _p6 flags

-- C: void ImGui::Initialize()
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_Initialize"
  imGui_Initialize :: IO ()
-- C: void ImGui::InputTextDeactivateHook(ImGuiID id)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_InputTextDeactivateHook"
  imGui_InputTextDeactivateHook :: ImGuiID -> IO ()
foreign import capi unsafe "DearImGuiWrappers.h ImGui_InputTextWithHintAndSize_wrap"
  c_imGui_InputTextWithHintAndSize :: CString -> CString -> (Ptr CChar) -> CInt -> (Ptr ImVec2) -> ImGuiInputTextFlags -> ImGuiInputTextCallback -> (Ptr ()) -> IO CBool

imGui_InputTextWithHintAndSize :: CString -> CString -> (Ptr CChar) -> CInt -> ImVec2 -> ImGuiInputTextFlags -> ImGuiInputTextCallback -> (Ptr ()) -> IO CBool
imGui_InputTextWithHintAndSize label hint buf buf_size size_arg flags callback user_data =
  with size_arg $ \_p4 -> c_imGui_InputTextWithHintAndSize label hint buf buf_size _p4 flags callback user_data

-- C: bool ImGui::IsActiveIdUsingNavDir(ImGuiDir dir)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_IsActiveIdUsingNavDir"
  imGui_IsActiveIdUsingNavDir :: ImGuiDir -> IO CBool
-- C: bool ImGui::IsAliasKey(ImGuiKey key)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_IsAliasKey"
  imGui_IsAliasKey :: ImGuiKey -> IO CBool
foreign import capi unsafe "DearImGuiWrappers.h ImGui_IsClippedEx_wrap"
  c_imGui_IsClippedEx :: (Ptr ImRect) -> ImGuiID -> IO CBool

imGui_IsClippedEx :: ImRect -> ImGuiID -> IO CBool
imGui_IsClippedEx bb id_ =
  with bb $ \_p0 -> c_imGui_IsClippedEx _p0 id_
